# Side-Scroller-Game

./: README.md  main.py  pyproject.toml  requirements.txt  settings.py
src/: main.py  screens.py  surfaces.py
src/side_scroller_game/: __main__.py  counters.py  main.py  paths.py  surfaces.py
