[project]
name = "side-scroller-game"
version = "1.0.0"
description = "Side-scroller game built with pygame"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
side-scroller-game = "side_scroller_game.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
